Update services.html with new meta tags and versioning
Updated stylesheet and script versioning, added Open Graph and Twitter Card meta tags for improved social sharing.

--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <title>Services | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/services.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -18,7 +18,23 @@
   <meta name="description" content="Explore services offered by Marietta Research Solutions including engineering consulting, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta name="robots" content="index,follow" />
   
+  
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="Services Offered | Marietta Research Solutions" />
+  <meta property="og:description" content="Explore services offered by Marietta Research Solutions including engineering consulting, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/services.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Services Offered | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Explore services offered by Marietta Research Solutions including engineering consulting, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -168,6 +184,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
