--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
   <title>Thank You | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/thanks.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -16,8 +16,23 @@
 
   <meta name="description" content="Thank you for contacting Marietta Research Solutions." />
   <meta name="robots" content="index,follow" />
-  
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="Thanks for Requesting Consultation | Marietta Research Solutions." />
+  <meta property="og:description" content="Thank you for contacting Marietta Research Solutions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/thanks.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Thanks for Requesting Consultation | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Thank you for contacting Marietta Research Solutions."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -25,6 +40,7 @@
 
   gtag('config', 'G-TFKE4XNDT7');
 </script>
+
 
 </head>
 
@@ -103,7 +119,7 @@
     });
   }
 </script>
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 
 </body>
 </html>
