--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         <strong>Phone:</strong>
         <a class="track-phone-jim" href="tel:17702860254">770-286-0254</a><br />
         <strong>Email:</strong>
-        <a class="track-email-jim" href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+        <a class="track-email-jim" href="mailto:info@mariettaresearchsolutions.com">info@mariettaresearchsolutions.com</a>
       </p>
 
       <p><strong>Business Address:</strong><br />
