--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
-  <meta name="twitter:description" content="Responsible AI workflows, automation support, and practical systems for small teams"/>
+  <meta name="twitter:title" content="Contact and request consultation form | Marietta Research Solutions" />
+  <meta name="twitter:description" content="request consultation to discuss Marietta Research solving your needs"/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
 
   <!-- Google tag (gtag.js) -->
@@ -72,15 +72,8 @@
       <h2>Contact Information</h2>
 
       <p>
-        <strong>Jim Maloney, PhD, MBA</strong><br />
-        Consulting Engineer / Paralegal
-      </p>
-
-      <p>
-        <strong>Phone:</strong>
-        <a class="track-phone-jim" href="tel:17702860254">770-286-0254</a><br />
         <strong>Email:</strong>
-        <a class="track-email-jim" href="mailto:info@mariettaresearchsolutions.com">info@mariettaresearchsolutions.com</a>
+        <a class="track-email-info" href="mailto:info@mariettaresearchsolutions.com">info@mariettaresearchsolutions.com</a>
       </p>
 
       <p><strong>Business Address:</strong><br />
