--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+kill<!DOCTYPE html>
 <html lang="en"> 
 <head>
   <meta charset="UTF-8" />
@@ -164,15 +164,8 @@
 
       <p>
         <strong>Email:</strong><br />
-        <a class="track-email-susan" href="mailto:susan@mariettaresearchsolutions.com">susan@mariettaresearchsolutions.com</a><br />
-        <a class="track-email-jim" href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+        <a class="track-email-susan" href="mailto:info@mariettaresearchsolutions.com">info@mariettaresearchsolutions.com</a><br />
        </p>
-
-        <p>
-  <strong>Phone:</strong><br />
-  <strong>Jim:</strong> <a class="track-phone-jim" href="tel:17702860254">770-286-0254</a>
-</p>
-      
 
       <p>
         <strong>Business Address:</strong><br />
