--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 
     <!-- Form Card -->
     <div class="contact-card">
-      <h2>Send a Message</h2>
+      <h2>Request a Consultation</h2>
 
       <!-- Spinner overlay (hidden by default; shown during submit) -->
       <div id="formOverlay" class="form-overlay" aria-hidden="true" style="display:none;">
