--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
 
   <div class="cta-row">
     <a class="btn" href="services.html">Explore Services</a>
-    <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
+    <a class="btn btn-outline" href="contact.html">Request Consultation</a>
   </div>
 </div>
 
