--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact / Consult | Marietta Research Solutions</title>
+  <title>Request Consultation | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/contact.html" />
   <link rel="preconnect" href="https://formspree.io">
@@ -20,16 +20,16 @@
   <meta name="robots" content="index,follow" />
 
 <!-- Open Graph -->
-  <meta property="og:site_name" content="Contact details for  Marietta Research Solutions" />
-  <meta property="og:title" content="Contact Form | Marietta Research Solutions" />
-  <meta property="og:description" content="Contact Marietta Research Solutiona to request a consultation.  We provide engineering, AI workflow, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="Requeat ConsultationForm | Marietta Research Solutions" />
+  <meta property="og:description" content="Request Consultation for Marietta Research Solutiona to request a consultation.  We provide engineering, AI workflow, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/contacts.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Contact and request consultation form | Marietta Research Solutions" />
+  <meta name="twitter:title" content="request consultation form | Marietta Research Solutions" />
   <meta name="twitter:description" content="request consultation to discuss Marietta Research solving your needs"/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
 
@@ -66,24 +66,6 @@
   </p>
 
   <div class="contact-grid">
-
-    <!-- Contact Info Card -->
-    <div class="contact-card">
-      <h2>Contact Information</h2>
-
-      <p>
-        <strong>Email:</strong>
-        <a class="track-email-info" href="mailto:info@mariettaresearchsolutions.com">info@mariettaresearchsolutions.com</a>
-      </p>
-
-      <p><strong>Business Address:</strong><br />
-        1640 Powers Ferry Rd SE<br />
-        Bldg 11, Suite 200<br />
-        Marietta, GA 30067
-      </p>
-
-      <p><strong>Hours:</strong> By appointment</p>
-    </div>
 
     <!-- Form Card -->
     <div class="contact-card">
@@ -184,7 +166,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     
-    <a href="contact.html">Contact / Consult</a> |
+    <a href="contact.html">Request Consult</a> |
     <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a><br />
     
