--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 </header>
 
 <div class="container">
-  <h2>Contact / Consult</h2>
+  <h2>Request Consultation</h2>
 
   <p>
     Use the form below to request a consultation or ask a question.
@@ -69,7 +69,7 @@
 
     <!-- Form Card -->
     <div class="contact-card">
-      <h2>Request a Consultation</h2>
+      <h2>Request</h2>
 
       <!-- Spinner overlay (hidden by default; shown during submit) -->
       <div id="formOverlay" class="form-overlay" aria-hidden="true" style="display:none;">
