--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
     <!-- Form Card -->
     <div class="contact-card">
-      <h2>Request</h2>
+      <h2>Request Form</h2>
 
       <!-- Spinner overlay (hidden by default; shown during submit) -->
       <div id="formOverlay" class="form-overlay" aria-hidden="true" style="display:none;">
@@ -166,7 +166,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     
-    <a href="contact.html">Request Consult</a> |
+    <a href="contact.html">Request-Consult</a> |
     <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a><br />
     
