--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   "name": "Marietta Research Solutions",
   "url": "https://jmaloney1965.github.io/Marietta-site/",
   "telephone": "+1-770-286-0254",
-  "email": "jim@mariettaresearchsolutions.com",
+  "email": "info@mariettaresearchsolutions.com",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "1640 Powers Ferry Rd SE, Bldg 11, Suite 200",
@@ -189,7 +189,7 @@
     1640 Powers Ferry Rd SE<br />
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
-    <a href="contact.html">Contact / Consult</a> |
+    <a href="contact.html">Request-Consult</a> |
     <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
