--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 
     <nav class="site-nav">
       <a href="index.html">Home</a>
-      <a href="contact.html">Contact / Consult</a>
+      <a href="contact.html">Request-Consult</a>
     </nav>
   </div>
 </header>
@@ -142,7 +142,7 @@
   
    <!-- Buttons moved here: bottom above Important Notes -->
   <div class="cta-row">
-    <a class="btn" href="contact.html">Contact / Consult</a>
+    <a class="btn" href="contact.html">Request Consultation</a>
     <a class="btn btn-outline capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">
       Capabilities (PDF)
     </a>
@@ -159,7 +159,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     
-    <a href="contact.html">Contact / Consult</a> |
+    <a href="contact.html">Request-Consult</a> |
     <a class="capabilities-link" id="capabilitiesLink" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
 
