--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <a class="btn btn-outline capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">
        Capabilities (PDF)
     </a>
-    <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
+    <a class="btn btn-outline" href="contact.html">Request Consultation</a>
   </div>
 
   <hr class="divider" />
