--- a/about.html
+++ b/about.html
@@ -46,7 +46,11 @@
 
 <header class="site-header">
   <div class="header-wrap">
-    <h1 class="site-title">Marietta Research Solutions</h1>
+
+    <a class="site-brand" href="index.html" aria-label="Marietta Research Solutions home">
+      <img src="mrs-logo-full.png" alt="Marietta Research Solutions" class="site-logo" />
+    </a>
+    
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
