--- a/about.html
+++ b/about.html
@@ -46,10 +46,8 @@
 
 <header class="site-header">
   <div class="header-wrap">
-
-    <a class="site-brand" href="index.html" aria-label="Marietta Research Solutions home">
-      <img src="mrs-logo-full.png" alt="Marietta Research Solutions" class="site-logo" />
-    </a>
+    
+    <img src="mrs-logo-full.svg" alt="Marietta Research Solutions" class="site-logo">
     
     <nav class="site-nav">
       <a href="index.html">Home</a>
