Add logo link and image to site header
Added logo link and image to the header.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
 
 <header class="site-header">
   <div class="header-wrap">
-    <h1 class="site-title">Marietta Research Solutions</h1>
+    <a href="index.html" class="site-logo">
+      <img
+        src="mrs-logo-full-600.png"
+        srcset="
+          mrs-logo-full-400.png 400w,
+          mrs-logo-full-600.png 600w,
+          mrs-logo-full-800.png 800w
+        "
+        sizes="(max-width: 600px) 240px, 320px"
+        alt="Marietta Research Solutions"
+      />
+    </a>
 
     <nav class="site-nav">
       <a href="about.html">About</a>
