Replace favicons with new logo images
Updated favicon links to new logo files for better branding.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
-  <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png" />
-  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="Mrs-logo-mark-16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="Mrs-logo-mark-32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="Mrs-logo-mark-180.png">
 
+<!-- PWA / Android -->
+<link rel="icon" type="image/png" sizes="192x192" href="Mrs-logo-mark-192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="Mrs-logo-mark-512.png">
+
+  
   <meta name="description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta name="robots" content="index,follow" />
 
