--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Jim<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -81,15 +81,17 @@
 <header class="site-header">
   <div class="header-wrap">
     <a href="index.html" class="site-logo">
+
 <img
-  src="mrs-logo-full-600.png"
+  src="mrs-logo-full-600-cropped.png"
   srcset="
-    mrs-logo-full-400.png 400w,
-    mrs-logo-full-600.png 600w,
-    mrs-logo-full-800.png 800w
+    mrs-logo-full-400-cropped.png 400w,
+    mrs-logo-full-600-cropped.png 600w,
+    mrs-logo-full-800-cropped.png 800w
   "
   alt="Marietta Research Solutions"
 />
+
     </a>
 
     <nav class="site-nav">
