--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ susan<!DOCTYPE html>
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260127t" />
+  <link rel="stylesheet" href="style.css?v=20260127u" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -82,15 +82,12 @@ susan<!DOCTYPE html>
   <div class="header-wrap">
     <a href="index.html" class="site-logo">
 
+
 <img
-  src="mrs-logo-full-600-cropped.png"
-  srcset="
-    mrs-logo-full-400-cropped.png 400w,
-    mrs-logo-full-600-cropped.png 600w,
-    mrs-logo-full-800-cropped.png 800w
-  "
+  src="mrs-logo-full-800.png"
   alt="Marietta Research Solutions"
 />
+
 
     </a>
 
