--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-mmm<!DOCTYPE html>
+bbbmmm<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -15,7 +15,7 @@ mmm<!DOCTYPE html>
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260127aa"/>
+  <link rel="stylesheet" href="style.css?v=20260127bb"/>
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
