--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ happy<!DOCTYPE html>
 
 
 <img
-  src="mrs-logo-full-800.png"
+  src="mrs-logo-full-800-cropped.png"
   alt="Marietta Research Solutions"
 />
 
