--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-happy<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -84,8 +84,15 @@ happy<!DOCTYPE html>
 
 
 <img
-  src="mrs-logo-full-800-cropped.png"
+  src="mrs-logo-full-600-cropped.png"
+  srcset="
+    mrs-logo-full-400-cropped.png 400w,
+    mrs-logo-full-600-cropped.png 600w,
+    mrs-logo-full-800-cropped.png 800w
+  "
   alt="Marietta Research Solutions"
+/>
+  
 />
 
 
