--- a/index.html
+++ b/index.html
@@ -82,21 +82,16 @@
   <div class="header-wrap">
     <a href="index.html" class="site-logo">
 
-
 <img
-  src="mrs-logo-full-600-cropped.png"
+  src="mrs-logo-tight2-600.png"
   srcset="
-    mrs-logo-full-400-cropped.png 400w,
-    mrs-logo-full-600-cropped.png 600w,
-    mrs-logo-full-800-cropped.png 800w
+    mrs-logo-tight2-400.png 400w,
+    mrs-logo-tight2-600.png 600w,
+    mrs-logo-tight2-800.png 800w
   "
+  sizes="92vw"
   alt="Marietta Research Solutions"
 />
-  
-/>
-
-
-    </a>
 
     <nav class="site-nav">
       <a href="about.html">About</a>
