--- a/about.html
+++ b/about.html
@@ -47,8 +47,17 @@
 <header class="site-header">
   <div class="header-wrap">
     
-    <img src="mrs-logo-full.svg" alt="Marietta Research Solutions" class="site-logo">
-    
+  <img
+  src="mrs-logo-tight2-600.png"
+  srcset="
+    mrs-logo-tight2-400.png 400w,
+    mrs-logo-tight2-600.png 600w,
+    mrs-logo-tight2-800.png 800w
+  "
+  sizes="92vw"
+  alt="Marietta Research Solutions"
+/>
+
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
