--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <a href="index.html" class="site-logo">
 
 <img
+  class="site-logo-img"
   src="mrs-logo-tight2-600.png"
   srcset="
     mrs-logo-tight2-400.png 400w,
