--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260202g"/>
+  <link rel="stylesheet" href="style.css?v=20260202h"/>
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
