--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <header class="site-header">
   <div class="header-wrap">
 
-<a href="index.html" class="site-logo" aria-label="Home">
+<a href="about.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
     src="mrs-logo-tight2-600.png"
