--- a/ai.html
+++ b/ai.html
@@ -48,7 +48,7 @@
 <header class="site-header">
   <div class="header-wrap">
     
-    <a href="about.html" class="site-logo" aria-label="Home">
+    <a href="ai.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
     src="mrs-logo-tight2-600.png"
