--- a/notary.html
+++ b/notary.html
@@ -49,8 +49,19 @@
 
 <header class="site-header">
   <div class="header-wrap">
-    <h1 class="site-title">Marietta Research Solutions</h1>
-
+    <a href="notary.html" class="site-logo" aria-label="Home">
+  <img
+    class="site-logo-img"
+    src="mrs-logo-tight2-600.png"
+    srcset="
+      mrs-logo-tight2-400.png 400w,
+      mrs-logo-tight2-600.png 600w,
+      mrs-logo-tight2-800.png 800w
+    "
+    sizes="(max-width: 600px) 92vw, 360px"
+    alt="Marietta Research Solutions"
+  />
+</a>
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
