--- a/faq.html
+++ b/faq.html
@@ -64,7 +64,7 @@
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="contact.html">Contact / Consult</a>
+      <a href="contact.html">Request-Consult</a>
     </nav>
   </div>
 </header>
@@ -161,7 +161,7 @@
     1640 Powers Ferry Rd SE<br />
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
-    <a href="contact.html">Contact / Consult</a> |
+    <a href="contact.html">Request-Consult</a> |
     <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
