--- a/privacy.html
+++ b/privacy.html
@@ -63,7 +63,7 @@
 </a>    <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="contact.html">Contact / Consult</a>
+      <a href="contact.html">Request-Consult</a>
     </nav>
   </div>
 </header>
