--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260202j"/>
+  <link rel="stylesheet" href="style.css?v=20260202k"/>
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
-<link rel="icon" type="image/png" sizes="16x16" href="Mrs-logo-mark-16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="Mrs-logo-mark-32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="Mrs-logo-mark-180.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
 
-<!-- PWA / Android -->
-<link rel="icon" type="image/png" sizes="192x192" href="Mrs-logo-mark-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="Mrs-logo-mark-512.png">
+<!-- iOS Home Screen -->
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180.png">
+<link rel="apple-touch-icon" sizes="167x167" href="apple-touch-icon-167.png">
+<link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120.png">
 
   
   <meta name="description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
