--- a/services.html
+++ b/services.html
@@ -90,6 +90,7 @@
           <img class="icon" src="images/icons/engineering.svg" alt="Engineering Icon" />
           <h3>Electrical Engineering Consulting</h3>
           <p>Technical consulting in antennas, RF systems, modeling, and telecommunications.</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -98,6 +99,7 @@
           <img class="icon" src="images/icons/ai.svg" alt="AI Icon" />
           <h3>AI for Small Businesses &amp; Law Firms</h3>
           <p>Practical AI workflows to improve speed, organization, and client service.</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -106,6 +108,7 @@
           <img class="icon" src="images/icons/paralegal.svg" alt="Paralegal Icon" />
           <h3>Paralegal Support &amp; Document Preparation</h3>
           <p>Professional form prep, organization, and filing support (non-legal services).</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -114,6 +117,7 @@
           <img class="icon" src="images/icons/patent.svg" alt="Patent Icon" />
           <h3>Patent Drafting Support</h3>
           <p>Technical drafting support and invention documentation for patent preparation.</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -122,6 +126,7 @@
           <img class="icon" src="images/icons/sbir.svg" alt="SBIR Icon" />
           <h3>SBIR Grant Writing Support</h3>
           <p>Proposal organization and technical writing support for SBIR/STTR grants.</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -130,6 +135,7 @@
           <img class="icon" src="images/icons/prison.svg" alt="Prison Consulting Icon" />
           <h3>Prison Consulting &amp; Reentry Support</h3>
           <p>Structured planning support for families and individuals (non-legal services).</p>
+          <span class="card-cta">Learn more →</span>
         </div>
       </a>
 
@@ -138,6 +144,7 @@
           <img class="icon" src="images/icons/notary.svg" alt="Notary Icon" />
           <h3>Notary Public Services</h3>
           <p>Professional notarizations by appointment in Marietta, Georgia.</p>
+          <span class="card-cta">Learn more →</span> 
         </div>
       </a>
 
