--- a/services.html
+++ b/services.html
@@ -82,6 +82,7 @@
 
   <hr class="divider" />
 
+<p class="tap-hint">Tap a service tile to view details.</p>
   <div class="section-panel">
     <div class="services-grid">
 
