--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260204a"/>
+  <link rel="stylesheet" href="style.css?v=20260209g"/>
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -66,7 +66,7 @@
 </script>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -84,11 +84,11 @@
 <a href="index.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png"
+    src="mrs-logo-tight2-600.png?v=20260209g?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png 400w,
-      mrs-logo-tight2-600.png 600w,
-      mrs-logo-tight2-800.png 800w
+      mrs-logo-tight2-400.png?v=20260209g?v=20260209g 400w,
+      mrs-logo-tight2-600.png?v=20260209g?v=20260209g 600w,
+      mrs-logo-tight2-800.png?v=20260209g?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
@@ -142,7 +142,7 @@
   </div>
 </div>
 
-<div class="container">
+<main class="container">
   <h2>How We Help</h2>
   <p>
     Marietta Research Solutions provides one-to-one support designed around your goals.
@@ -196,7 +196,7 @@
       <a class="btn btn-outline" href="about.html">Read More About Susan</a>
     </div>
   </div>
-</div>
+</main>
 
 <p class="last-updated">Last updated: January 2026</p>
 
@@ -213,22 +213,6 @@
 </footer>
 
 <button id="backToTop" title="Back to Top">&#8679;</button>
-
-<script>
-  const backToTopBtn = document.getElementById("backToTop");
-
-  window.onscroll = function() {
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-      backToTopBtn.style.display = "block";
-    } else {
-      backToTopBtn.style.display = "none";
-    }
-  };
-
-  backToTopBtn.addEventListener("click", function() {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-</script>
 
 <script src="site.js?v=20260117"></script>
 </body>
