--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
   <title>Thank You | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/thanks.html" />
-  <link rel="stylesheet" href="style.css?v=20260117" />
+  <link rel="stylesheet" href="style.css?v=20260209g" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
