--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/about.html" />
-  <link rel="stylesheet" href="style.css?v=2026012b" />
+  <link rel="stylesheet" href="style.css?v=20260209g" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -50,11 +50,11 @@
 <a href="about.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png"
+    src="mrs-logo-tight2-600.png?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png 400w,
-      mrs-logo-tight2-600.png 600w,
-      mrs-logo-tight2-800.png 800w
+      mrs-logo-tight2-400.png?v=20260209g 400w,
+      mrs-logo-tight2-600.png?v=20260209g 600w,
+      mrs-logo-tight2-800.png?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
