--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
   <title>AI for Small Businesses & Law Firms | Marietta Research Solutions</title>
   
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/ai.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260209g" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -51,11 +51,11 @@
     <a href="ai.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png"
+    src="mrs-logo-tight2-600.png?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png 400w,
-      mrs-logo-tight2-600.png 600w,
-      mrs-logo-tight2-800.png 800w
+      mrs-logo-tight2-400.png?v=20260209g 400w,
+      mrs-logo-tight2-600.png?v=20260209g 600w,
+      mrs-logo-tight2-800.png?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
