--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/contact.html" />
   <link rel="preconnect" href="https://formspree.io">
-  <link rel="stylesheet" href="style.css?v=20260117" />
+  <link rel="stylesheet" href="style.css?v=20260209g" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -50,11 +50,11 @@
     <a href="contact.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png"
+    src="mrs-logo-tight2-600.png?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png 400w,
-      mrs-logo-tight2-600.png 600w,
-      mrs-logo-tight2-800.png 800w
+      mrs-logo-tight2-400.png?v=20260209g 400w,
+      mrs-logo-tight2-600.png?v=20260209g 600w,
+      mrs-logo-tight2-800.png?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
