--- a/notary.html
+++ b/notary.html
@@ -6,7 +6,7 @@
   <title>Notary Public Services | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/notary.html" />
-  <link rel="stylesheet" href="style.css?v=20260117" />
+  <link rel="stylesheet" href="style.css?v=20260209g" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -52,11 +52,11 @@
     <a href="notary.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png"
+    src="mrs-logo-tight2-600.png?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png 400w,
-      mrs-logo-tight2-600.png 600w,
-      mrs-logo-tight2-800.png 800w
+      mrs-logo-tight2-400.png?v=20260209g 400w,
+      mrs-logo-tight2-600.png?v=20260209g 600w,
+      mrs-logo-tight2-800.png?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
