Add site tagline footer to index.html and style.css for improved branding

--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
   </p>
 </footer>
 
+<footer class="site-tagline-footer">
+  <p>Strategic Consulting at the Intersection of Engineering &amp; Intelligence. Launching Spring 2026.</p>
+</footer>
+
 <button id="backToTop" title="Back to Top">&#8679;</button>
 
 <script>
