--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 <a href="index.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-tight2-600.png?v=20260209g"
+    src="mrs-logo-full-600-cropped-gold.png?v=20260209g"
     srcset="
-      mrs-logo-tight2-400.png?v=20260209g 400w,
-      mrs-logo-tight2-600.png?v=20260209g 600w,
-      mrs-logo-tight2-800.png?v=20260209g 800w
+      mrs-logo-full-400-cropped-gold.png?v=20260209g 400w,
+      mrs-logo-full-600-cropped-gold.png?v=20260209g 600w,
+      mrs-logo-full-800-cropped-gold.png?v=20260209g 800w
     "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
