--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <a href="index.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-full-600-cropped-gold.png?v=20260209g"
+    src="mrs-logo-full-600-cropped-gold.png?v=20260211a"
     srcset="
       mrs-logo-full-400-cropped-gold.png?v=20260209g 400w,
       mrs-logo-full-600-cropped-gold.png?v=20260209g 600w,
