--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Happy<!DOCTYPE html>
 <a href="index.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-full-600-tight-gold.png?v=20260211f"
+    src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211g"
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
   />
