--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@ Happy<!DOCTYPE html>
 <a href="index.html" class="site-logo" aria-label="Home">
   <img
     class="site-logo-img"
-    src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211i"
+    src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
+    srcset="
+        mrs-logo-full-400-tight-gold_decontam.png 400w,
+        mrs-logo-full-600-tight-gold_decontam.png 600w,
+        mrs-logo-full-800-tight-gold_decontam.png 800w
+    "
     sizes="(max-width: 600px) 92vw, 360px"
     alt="Marietta Research Solutions"
   />
