--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Happy<!DOCTYPE html> 
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -81,19 +81,19 @@ Happy<!DOCTYPE html>
 
 <header class="site-header">
   <div class="header-wrap">
-<a href="index.html" class="site-logo" aria-label="Home">
-  <img
-    class="site-logo-img"
-    src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
-    srcset="
-        mrs-logo-full-400-tight-gold_decontam.png 400w,
-        mrs-logo-full-600-tight-gold_decontam.png 600w,
-        mrs-logo-full-800-tight-gold_decontam.png 800w
-    "
-    sizes="(max-width: 600px) 92vw, 360px"
-    alt="Marietta Research Solutions"
-  />
-</a>
+    <a href="index.html" class="site-logo" aria-label="Home">
+      <img
+        class="site-logo-img"
+        src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
+        srcset="
+          mrs-logo-full-400-tight-gold_decontam.png 400w,
+          mrs-logo-full-600-tight-gold_decontam.png 600w,
+          mrs-logo-full-800-tight-gold_decontam.png 800w
+        "
+        sizes="(max-width: 600px) 92vw, 360px"
+        alt="Marietta Research Solutions"
+      />
+    </a>
 
     <nav class="site-nav">
       <a href="about.html">About</a>
