--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,18 @@
 <header class="site-header">
   <div class="header-wrap">
     <a href="contact.html" class="site-logo" aria-label="Home">
-  <img
-    class="site-logo-img"
-    src="mrs-logo-tight2-600.png?v=20260209g"
-    srcset="
-      mrs-logo-tight2-400.png?v=20260209g 400w,
-      mrs-logo-tight2-600.png?v=20260209g 600w,
-      mrs-logo-tight2-800.png?v=20260209g 800w
-    "
-    sizes="(max-width: 600px) 92vw, 360px"
-    alt="Marietta Research Solutions"
-  />
-</a>
+      <img
+        class="site-logo-img"
+        src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
+        srcset="
+          mrs-logo-full-400-tight-gold_decontam.png 400w,
+          mrs-logo-full-600-tight-gold_decontam.png 600w,
+          mrs-logo-full-800-tight-gold_decontam.png 800w
+        "
+        sizes="(max-width: 600px) 92vw, 360px"
+        alt="Marietta Research Solutions"
+      />
+    </a>
 
     <nav class="site-nav">
       <a href="index.html">Home</a>
