--- a/thanks.html
+++ b/thanks.html
@@ -46,9 +46,23 @@
 
 <body>
 
-<header class="site-header">
+
+  <header class="site-header">
   <div class="header-wrap">
-    <h1 class="site-title">Marietta Research Solutions</h1>
+    <a href="index.html" class="site-logo" aria-label="Home">
+      <img
+        class="site-logo-img"
+        src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
+        srcset="
+          mrs-logo-full-400-tight-gold_decontam.png 400w,
+          mrs-logo-full-600-tight-gold_decontam.png 600w,
+          mrs-logo-full-800-tight-gold_decontam.png 800w
+        "
+        sizes="(max-width: 600px) 92vw, 360px"
+        alt="Marietta Research Solutions"
+      />
+    </a>
+
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
