--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <a href="index.html" class="site-logo" aria-label="Home">
       <img
         class="site-logo-img"
-        src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211j"
+        src="mrs-logo-full-800-tight-gold_decontam.png?v=20260211k"
         srcset="
           mrs-logo-full-400-tight-gold_decontam.png 400w,
           mrs-logo-full-600-tight-gold_decontam.png 600w,
