Major site overhaul: CEM/antenna focus, enhanced bios, new OG image
- Rewrote index.html: new hero, capability cards, Jim's leadership card
- Rewrote engineering.html: full CEM services, proprietary tools, 3 patents, industries, book link
- Enhanced about.html: detailed career narrative, Google Scholar/LinkedIn links
- Reorganized services.html: core services + Additional Services section
- Updated contact.html: reordered service dropdown
- New OG image: lighter blue with gold accents, CEM tagline
- Lightened hero overlay for better readability

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/contact.html" />
   <link rel="preconnect" href="https://formspree.io">
-  <link rel="stylesheet" href="style.css?v=20260209g" />
+  <link rel="stylesheet" href="style.css?v=20260217" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -17,13 +17,13 @@
   <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-  <meta name="description" content="Contact Marietta Research Solutions to request a consultation. We provide engineering, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta name="description" content="Contact Marietta Research Solutions for computational electromagnetics, antenna design, AI-accelerated engineering, paralegal support, patent drafting, SBIR support, prison consulting, and notary services." />
   <meta name="robots" content="index,follow" />
 
 <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Request Consultation | Marietta Research Solutions" />
-  <meta property="og:description" content="Contact Marietta Research Solutions to request a consultation. We provide engineering, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta property="og:description" content="Contact Marietta Research Solutions for computational electromagnetics, antenna design, and professional consulting services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/contact.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
@@ -31,7 +31,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Request Consultation | Marietta Research Solutions" />
-  <meta name="twitter:description" content="Contact Marietta Research Solutions to request a consultation. We provide engineering, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta name="twitter:description" content="Contact Marietta Research Solutions for computational electromagnetics, antenna design, and professional consulting services." />
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
 
   <!-- Google tag (gtag.js) -->
@@ -120,11 +120,11 @@
         <label for="service">Service of Interest</label>
         <select id="service" name="service" required>
           <option value="" selected disabled>Select one</option>
-          <option>Electrical Engineering Consulting</option>
-          <option>AI for Small Businesses & Law Firms</option>
-          <option>Paralegal Support & Document Preparation</option>
-          <option>Patent Drafting Support</option>
+          <option>Computational Electromagnetics & Antenna Design</option>
+          <option>AI-Accelerated Engineering</option>
           <option>SBIR Grant Writing Support</option>
+          <option>Patent Drafting Support</option>
+          <option>Paralegal Support & Document Preparation</option>
           <option>Prison Consulting & Reentry Support</option>
           <option>Notary Public Services</option>
           <option>Other</option>
