Update Susan's title: Owner → President

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
       <div class="leadership-nameblock">
         <h4>Susan Mercer</h4>
-        <p class="role">Owner | Marietta Research Solutions</p>
+        <p class="role">President | Marietta Research Solutions</p>
       </div>
     </div>
 
