--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 
   <hr class="divider" />
 
-  <h3>Owner</h3>
+  <h3>President</h3>
 
   <div class="leadership-card">
 
@@ -160,7 +160,7 @@
 
       <div class="leadership-nameblock">
         <h4>Susan Mercer</h4>
-        <p class="role">Owner | Marietta Research Solutions</p>
+        <p class="role">President | Marietta Research Solutions</p>
       </div>
     </div>
 
