--- a/engineering.html
+++ b/engineering.html
@@ -151,6 +151,7 @@
   <ul>
     <li><strong>US Patent 6,323,809:</strong> Fragmented Aperture Antennas and Broadband Antenna Ground Planes — the foundational patent in genetically optimized antenna design</li>
     <li><strong>US Patent 11,228,102:</strong> Fragmented Aperture Antennas — advanced fragmented aperture antenna techniques extending the original invention</li>
+    <li><strong>US Patent 10,203,202:</strong> Non-Contact Determination of Coating Thickness — electromagnetic methods for non-contact RF coating measurement and verification</li>
     <li><strong>US Patent 5,689,275:</strong> Electromagnetic Antenna and Transmission Line Utilizing Photonic Bandgap Material</li>
     <li><strong>IEEE AP-S Best Paper Award (1993)</strong> and <strong>Runner-up (1992)</strong> — recognized for outstanding contributions to antenna research</li>
     <li><strong>Book in progress:</strong> <a href="https://jmaloney1965.github.io/fragmented-aperture-book/" target="_blank" rel="noopener"><em>Fragmented Aperture Antennas</em></a> — the definitive reference on the theory, design, and applications of fragmented aperture antenna technology</li>
