Cache-bust og:image URL to force LinkedIn refresh

--- a/ai.html
+++ b/ai.html
@@ -26,13 +26,13 @@
   <meta property="og:description" content="Responsible AI workflows, automation support, and practical systems for small teams." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
   <meta name="twitter:description" content="Responsible AI workflows, automation support, and practical systems for small teams"/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
