--- a/faq.html
+++ b/faq.html
@@ -25,13 +25,13 @@
   <meta property="og:description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/faq.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="FAQ | Marietta Research Solutions" />
   <meta name="twitter:description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
