--- a/notary.html
+++ b/notary.html
@@ -25,13 +25,13 @@
   <meta property="og:description" content="By-appointment notary services in Marietta, GA. Bring valid ID and unsigned documents." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/notary.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Notary Public Services | Marietta Research Solutions" />
   <meta name="twitter:description" content="By-appointment notary services in Marietta, GA. Bring valid ID and unsigned documents."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
   
   <!-- Google tag (gtag.js) -->
