--- a/prison-consulting.html
+++ b/prison-consulting.html
@@ -25,13 +25,13 @@
   <meta property="og:description" content="Practical planning and administrative support for reentry, paperwork organization, and non-legal advocacy assistance." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/prison-consulting.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Prison Consulting & Reentry Support | Marietta Research Solutions" />
   <meta name="twitter:description" content="Practical planning and administrative support for reentry, paperwork organization, and non-legal advocacy assistance."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
   
   <!-- Google tag (gtag.js) -->
