--- a/privacy.html
+++ b/privacy.html
@@ -24,13 +24,13 @@
   <meta property="og:description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/privacy.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Privacy Policy | Marietta Research Solutions" />
   <meta name="twitter:description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
   
   <!-- Google tag (gtag.js) -->
