--- a/services.html
+++ b/services.html
@@ -26,13 +26,13 @@
   <meta property="og:description" content="Computational electromagnetics, antenna design, AI-accelerated engineering, SBIR support, patent drafting, paralegal, prison consulting, and notary services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/services.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Services | Marietta Research Solutions" />
   <meta name="twitter:description" content="Computational electromagnetics, antenna design, AI-accelerated engineering, SBIR support, patent drafting, paralegal, prison consulting, and notary services."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
