--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,13 @@
   <meta property="og:description" content="Contact Marietta Research Solutions for computational electromagnetics, antenna design, and professional consulting services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/contact.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Request Consultation | Marietta Research Solutions" />
   <meta name="twitter:description" content="Contact Marietta Research Solutions for computational electromagnetics, antenna design, and professional consulting services." />
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
