--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <meta property="og:description" content="Computational electromagnetics, antenna design, and AI-accelerated simulation — backed by PhD-level expertise and proprietary tools." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Advanced Electromagnetic Engineering & Consulting | Marietta Research Solutions" />
   <meta name="twitter:description" content="Computational electromagnetics, antenna design, and AI-accelerated simulation — backed by PhD-level expertise and proprietary tools."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
   <script type="application/ld+json">
 {
