--- a/patents.html
+++ b/patents.html
@@ -25,13 +25,13 @@
   <meta property="og:description" content="Technical documentation and patent drafting support to organize inventions for attorney review." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/patents.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Patent Drafting Support | Marietta Research Solutions" />
   <meta name="twitter:description" content="Technical documentation and patent drafting support to organize inventions for attorney review."/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
   
   
   <!-- Google tag (gtag.js) -->
